Wavin' my magic wand, turning not-code to code ps havent committed all changes just the most stable ones
git-svn-id: svn+ssh://scheduler.csc.calpoly.edu/repo@2674 13b268f7-8392-4c9d-bc7d-1e80a86bc2f9